--- a/app.html
+++ b/app.html
@@ -112,6 +112,7 @@
     const reload = document.getElementById("reload");
     const close = document.getElementById("close");
     let isOpenButtons = true;
+    let checkClient = setInterval(clientFullScreen, 1000);
 
     zoomIn.addEventListener('click', () => {
         ipcRenderer.send("zoomIn", "");
@@ -124,6 +125,7 @@
     });
     reload.addEventListener('click', () => {
         iframe.location.reload();
+        checkClient = setInterval(clientFullScreen, 1000);
     });
 
     function clientFullScreen() {
@@ -131,9 +133,9 @@
             iframe.document.getElementById('hotel1').addEventListener('click', () => {
                 ipcRenderer.send("fullscreen", "");
             });
+            clearInterval(checkClient);
         }
     }
-    const checkClient = setInterval(clientFullScreen, 1000);
 
     close.addEventListener('click', () => {
         if (!isOpenButtons) {
@@ -202,16 +204,18 @@
             const link = iframe.document.querySelectorAll('#articlescombbcode')[3];
             const img = iframe.document.querySelectorAll('#articlescombbcode')[4];
             if (link && img) {
-                link.setAttribute("onClick", "");
-                img.setAttribute("onClick", "");
-                link.addEventListener('click', () => {
-                    openAlert("Forum - Lien", "Entre le lien que tu souhaites insérer dans le champ ci-dessous.", true);
-                    forma.setAttribute("onSubmit", "formSubmit(event, 'createLink')");
-                });
-                img.addEventListener('click', () => {
-                    openAlert("Forum - Image", "Entre l'adresse de l'image que tu souhaites insérer dans le champ ci-dessous.", true);
-                    forma.setAttribute("onSubmit", "formSubmit(event, 'insertImage')");
-                });
+                if(link.outerHTML !== '<button id="articlescombbcode" type="button" onclick="">Lien</button>' && img.outerHTML !== '<button id="articlescombbcode" type="button" onclick="">Image</button>') {
+                    link.setAttribute("onClick", "");
+                    img.setAttribute("onClick", "");
+                    link.addEventListener('click', () => {
+                        openAlert("Forum - Lien", "Entre le lien que tu souhaites insérer dans le champ ci-dessous.", true);
+                        forma.setAttribute("onSubmit", "formSubmit(event, 'createLink')");
+                    });
+                    img.addEventListener('click', () => {
+                        openAlert("Forum - Image", "Entre l'adresse de l'image que tu souhaites insérer dans le champ ci-dessous.", true);
+                        forma.setAttribute("onSubmit", "formSubmit(event, 'insertImage')");
+                    });
+                }
             }
         }
     }
