--- a/app.html
+++ b/app.html
@@ -183,6 +183,7 @@
     function closeAlert() {
         alert.style.visibility = "hidden";
         inputa.style.visibility = "hidden";
+        inputa.value = '';
     }
 
     const cache = document.getElementById("cache");
