--- a/app.html
+++ b/app.html
@@ -84,7 +84,7 @@
     <div id="toggleRpc" class="button" style="margin-bottom: 6px">
         <div class="icon rpc"></div>
         <div class="tooltip">
-            Activer la Rich Presence Discord
+            Activer / Désactiver la Rich Presence Discord
         </div>
     </div>
 </div>
