--- a/app.html
+++ b/app.html
@@ -42,7 +42,7 @@
     <div class="logo"></div>
     <div id="version" class="version">...</div>
 </div>
-<iframe id="frame" width="100%" src="http://localhost/city-hotel-local/hotel.php?id=2"></iframe>
+<iframe id="frame" width="100%" src="https://www.habbocity.me/profil.php?app=true"></iframe>
 <div class="buttons">
     <div id="close">
         <div id="close-button" style="transform: scaleX(-1);"></div>
