--- a/app.html
+++ b/app.html
@@ -10,20 +10,21 @@
 <body>
 <div id="alert" class="alert">
     <div class="box">
-        <div id="title" class="title">Attention...</div>
-        <div id="description" class="description">Tu souhaites vider ton cache et relancer l'application.</div>
-        <input id="input" placeholder="Mon text"/>
-        <div class="btns">
-            <div id="cancel" class="button" style="float:left;background: #ed1c24;">
-                <div class="alpha"></div>
-                Annuler
+        <form id="form">
+            <div id="title" class="title">Attention...</div>
+            <div id="description" class="description">Tu souhaites vider ton cache et relancer l'application.</div>
+            <input type="text" id="input" placeholder="Mon texte..."/>
+            <div class="btns">
+                <div id="cancel" class="button" style="float:left;background: #ed1c24;">
+                    <div class="alpha"></div>
+                    Annuler
+                </div>
+                <button id="confirm" style="font-family: 'Ubuntu', sans-serif;" class="button" type="submit">
+                    <div class="alpha"></div>
+                    Confirmer
+                </button>
             </div>
-            <div id="confirm" class="button">
-                <div class="alpha"></div>
-                Confirmer
-            </div>
-            </form>
-        </div>
+        </form>
     </div>
 </div>
 <div id="updater" class="updater">
@@ -141,6 +142,7 @@
         alert.style.visibility = "visible";
         title.innerText = t;
         description.innerHTML = d;
+        input.value = '';
 
         if (i) {
             input.style.visibility = "visible";
@@ -158,7 +160,6 @@
     let closeAlert = () => {
         alert.style.visibility = "hidden";
         input.style.visibility = "hidden";
-        input.value = '';
     }
 
     let formSubmit = (event, type) => {
@@ -167,7 +168,6 @@
         iframe.document.execCommand(type, false, input.value);
         const selection = iframe.document.getSelection();
         selection.anchorNode.parentElement.target = '_blank';
-        input.value = '';
     }
     let forumSendImage = () => {
         if (iframe.location.pathname.startsWith('/forum/')) {
@@ -372,7 +372,7 @@
                 if (iframe.document.getElementById('ai5')) iframeData.elements.push(iframe.document.getElementById('ai5').innerText);
             }
 
-            if (updater.style.display === 'block') {
+            if (updater.style.display !== 'none') {
                 iframeData.update = true;
             }
 
