--- a/app.html
+++ b/app.html
@@ -95,6 +95,8 @@
     let updater = document.getElementById("updater");
     let progression = document.getElementById("progression");
     let version = document.getElementById("version");
+    let iframe = document.getElementById("frame").contentWindow;
+    let updateCount = 0;
 
     ipcRenderer.on("version", (event, data) => {
         version.innerHTML = data;
@@ -109,12 +111,27 @@
     });
     ipcRenderer.on("download-progress", (event, data) => {
         progression.innerHTML = Math.round(data['percent']) + "%";
+        if (data['inBack'] === true && updateCount === 0) {
+            iframe.notify('Une mise à jour de l\'application est en cours de téléchargement en arrière-plan...');
+            updateCount = 1;
+        }
+    });
+    ipcRenderer.on("askForUpdate", () => {
+        if (iframe.location.pathname.replace('.php', '') !== '/hotel') {
+            openAlert('Mise à jour', 'Une mise à jour de l\'application est disponible !', ['Plus tard', 'Installer'], false, "responseForUpdate", true);
+        } else {
+            const updateHotel = setInterval(() => {
+                if (iframe.location.pathname.replace('.php', '') !== '/hotel') {
+                    openAlert('Mise à jour', 'Une mise à jour de l\'application est disponible !', ['Plus tard', 'Installer'], false, "responseForUpdate", true);
+                    clearInterval(updateHotel);
+                }
+            }, 30000);
+        }
     });
 
     let isOpenButtons = true;
     let zoomIn = document.getElementById("zoomIn");
     let zoomOut = document.getElementById("zoomOut");
-    let iframe = document.getElementById("frame").contentWindow;
     let reload = document.getElementById("reload");
     let close = document.getElementById("close");
     let cache = document.getElementById("cache");
@@ -168,19 +185,6 @@
         alert.style.visibility = "hidden";
         input.style.visibility = "hidden";
     }
-
-    ipcRenderer.on("askForUpdate", () => {
-        if (iframe.location.pathname.replace('.php', '') !== '/hotel') {
-            openAlert('Mise à jour', 'Une mise à jour de l\'application est disponible !', ['Plus tard', 'Installer'], false, "responseForUpdate", true);
-        } else {
-            const updateHotel = setInterval(() => {
-                if (iframe.location.pathname.replace('.php', '') !== '/hotel') {
-                    openAlert('Mise à jour', 'Une mise à jour de l\'application est disponible !', ['Plus tard', 'Installer'], false, "responseForUpdate", true);
-                    clearInterval(updateHotel);
-                }
-            }, 30000);
-        }
-    });
 
     let formSubmit = (event, type) => {
         event = event || window.event;
